@@ -60,6 +60,7 @@ be_visitor_component_ami_rh_ex_base::init (void)
 
   this->base_class_name_ = scope->full_name ();
   this->base_class_name_ += smart_scope;
+  this->base_class_name_ += "CCM_";
   this->base_class_name_ += base;
 
   this->class_name_ = base;
